# buf-min

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: checks.yml  linux.yml  osx.yml
benches/: Cargo.toml  README.md
benches/src/: all.rs  main.rs
src/: lib.rs
