[package]
name = "buf-min"
version = "0.3.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Minimal buffer traits"
keywords = ["buffers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/buf-min"
documentation = "https://docs.rs/buf-min"
edition = "2018"

[features]
bytes-buf = ["bytes"]
bytes-buf-tokio3 = ["bytes-tokio3"]

[dependencies]
bytes = { version = "0.5", package = "bytes", optional = true }
bytes-tokio3 = { version = "0.6", package = "bytes", optional = true }

[package.metadata.docs.rs]
all-features = true
