[package]
name = "buf-min"
version = "0.6.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Minimal utf-8 safe buffer traits"
keywords = ["buffers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/buf-min"
documentation = "https://docs.rs/buf-min"
edition = "2018"

[features]
bytes-buf-tokio2 = ["bytes-tokio2"]
bytes-buf-tokio3 = ["bytes-tokio3"]
ntex = ["ntex-bytes"]

[dependencies]
bytes-tokio2 = { version = "0.5", package = "bytes", optional = true }
bytes-tokio3 = { version = "1.2", package = "bytes", optional = true }
ntex-bytes = { version = "0.1", optional = true }

[package.metadata.docs.rs]
features = ["bytes-buf-tokio3", "ntex"]
