[package]
name = "buf-min"
version = "0.7.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Minimal utf-8 safe buffer traits"
keywords = ["buffers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/buf-min"
documentation = "https://docs.rs/buf-min"
edition = "2021"

[dependencies]
bytes = { version = "1.3", package = "bytes", optional = true }
ntex-bytes = { version = "0.1", optional = true }

[package.metadata.docs.rs]
all-features = true
